package com.fs.springboot.models;

public class SpeechPost {
	private String audio;

	public String getAudio() {
		return audio;
	}

	public void setAudio(String audio) {
		this.audio = audio;
	}
	
	
}
