@startuml

title __FEEDBACKPROCESS's Class Diagram__\n

  namespace  {
    class MavenWrapperDownloader {
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      class com.fs.springboot.Auth {
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      class com.fs.springboot.FeedbackprocessApplication {
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace controllers {
        class com.fs.springboot.controllers.SpeechTranscriber {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace controllers {
        class com.fs.springboot.controllers.ToneAnalyzerController {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.AsyncLog {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.SpeechTranscriberAccessService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace dao {
        interface com.fs.springboot.dao.SpeechTranscriberDao {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace dao {
        class com.fs.springboot.dao.ToneAnalyzerAccessService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace dao {
        interface com.fs.springboot.dao.ToneAnalyzerDao {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace models {
        class com.fs.springboot.models.SpeechPost {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.LogService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.SpeechTranscriberService {
        }
      }
    }
  }
  

  namespace  {
    namespace om.fs.springboot {
      namespace services {
        class com.fs.springboot.services.ToneAnalyzerService {
        }
      }
    }
  }
  

  com.fs.springboot.controllers.SpeechTranscriber o-- com.fs.springboot.services.SpeechTranscriberService : speechTranscriberService
  com.fs.springboot.controllers.ToneAnalyzerController o-- com.fs.springboot.services.ToneAnalyzerService : toneAnalyzerService
  com.fs.springboot.dao.AsyncLog .up.|> java.lang.Runnable
  com.fs.springboot.dao.AsyncLog o-- com.fs.springboot.services.LogService : logService
  com.fs.springboot.dao.SpeechTranscriberAccessService .up.|> com.fs.springboot.dao.SpeechTranscriberDao
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.Auth : auth
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.services.LogService : logService
  com.fs.springboot.dao.SpeechTranscriberAccessService o-- com.fs.springboot.services.ToneAnalyzerService : toneAnalyzerService
  com.fs.springboot.dao.ToneAnalyzerAccessService .up.|> com.fs.springboot.dao.ToneAnalyzerDao
  com.fs.springboot.services.SpeechTranscriberService o-- com.fs.springboot.dao.SpeechTranscriberDao : speechTranscriberDao
  com.fs.springboot.services.ToneAnalyzerService o-- com.fs.springboot.dao.ToneAnalyzerDao : toneAnalyzerDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
